# AirplayServer

./: .gitignore  CMakeLists.txt  README.md  airplay_server.cpp  build.gradle  gradle.properties  log.h  rpiplay.cpp
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/fang/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: jni_raop_server.cpp  log.h
app/src/main/cpp/lib/: CMakeLists.txt  byteutils.c  byteutils.h  dnssd.c  dnssd.h  fairplay_playfair.c  mirror_buffer.c  mirror_buffer.h  netutils.c  raop.c  raop.h  raop_buffer.c  raop_handlers.h  raop_rtp.c  raop_rtp_mirror.c  raop_rtp_mirror.h  stream.h  utils.c
app/src/main/cpp/lib/crypto/: CMakeLists.txt
app/src/main/cpp/lib/curve25519/: CMakeLists.txt
app/src/main/cpp/lib/ed25519/: CMakeLists.txt
app/src/main/cpp/lib/playfair/: CMakeLists.txt
app/src/main/cpp/lib/plist/: CMakeLists.txt
app/src/main/cpp/mDNSResponder/: CMakeLists.txt  Makefile  README.txt
app/src/main/cpp/mDNSResponder/Clients/: dns-sd.c  dnssdutil.c
app/src/main/cpp/mDNSResponder/mDNSCore/: DNSCommon.h  DNSDigest.c  dnsproxy.c  dnssec.c  mDNS.c  mDNSDebug.h  nsec3.c  uDNS.c
app/src/main/cpp/mDNSResponder/mDNSMacOSX/: BLE.c  CryptoSupport.c  DNS64.c  DNS64.h  DNS64State.h  DNSProxySupport.c  DNSSECSupport.c  DNSServiceDiscovery.c  Metrics.h  com.apple.mDNSResponderHelper.plist  coreBLE.h  coreBLE.m  dnssdutil-entitlements.plist  helper-main.c  helper.c  mDNSMacOSX.c  mDNSResponder-xcodeproj-explanation.txt  uDNSPathEvalulation.c
app/src/main/cpp/mDNSResponder/mDNSMacOSX/Bonjour Safari Extension/: CNServiceBrowserView.h  Localizable.strings  SafariExtensionViewController.h
app/src/main/cpp/mDNSResponder/mDNSMacOSX/Bonjour Safari Menu/: AppDelegate.m  ViewController.h  main.m
app/src/main/cpp/mDNSResponder/mDNSMacOSX/Bonjour Safari Menu/Base.lproj/: Main.storyboard
app/src/main/cpp/mDNSResponder/mDNSMacOSX/BonjourTop/BonjourTop.xcodeproj/: project.pbxproj
app/src/main/cpp/mDNSResponder/mDNSMacOSX/BonjourTop/source/: BonjourTop.1  CaptureFile.h  CollectBy.cpp  CollectBy.h  DNSFrame.h  LLRBTree.h  bjsocket.cpp  bjsocket.h  bjstring.h  bjtypes.h
app/src/main/cpp/mDNSResponder/mDNSMacOSX/DomainBrowser/Shared/: CNDomainBrowserPathUtils.h  _CNDomainBrowser.h  _CNDomainBrowser.m
app/src/main/cpp/mDNSResponder/mDNSMacOSX/DomainBrowser/iOS/: CNDomainBrowserViewController.h  DomainBrowser.h  DomainBrowser.strings
app/src/main/cpp/mDNSResponder/mDNSMacOSX/LoggingProfiles/: com.apple.mDNSResponder.plist
app/src/main/cpp/mDNSResponder/mDNSMacOSX/PreferencePane/: DNSServiceDiscoveryPref.h
app/src/main/cpp/mDNSResponder/mDNSMacOSX/PreferencePane/BonjourPrefTool/: BonjourPrefTool-Info.plist  BonjourPrefTool.h
app/src/main/cpp/mDNSResponder/mDNSMacOSX/PreferencePane/RemoteViewService/: entitlements.plist  main.m
app/src/main/cpp/mDNSResponder/mDNSMacOSX/Private/: dnsctl_server.c  xpc_services.c
app/src/main/cpp/mDNSResponder/mDNSMacOSX/Scripts/: bonjour-start-mdns-tcpdump  com.apple.mDNSResponder.mdns-tcpdump.plist
app/src/main/cpp/mDNSResponder/mDNSMacOSX/SettingsBundle/: BonjourSCStore.h  HostnameController.m
app/src/main/cpp/mDNSResponder/mDNSMacOSX/Tests/: mDNSResponder.plist
app/src/main/cpp/mDNSResponder/mDNSMacOSX/mDNSResponder.xcodeproj/xcshareddata/xcschemes/: Build All.xcscheme
app/src/main/cpp/mDNSResponder/mDNSPosix/: ExampleClientApp.c  NetMonitor.c  PosixDaemon.c  Responder.c  mDNSPosix.h  mDNSUNP.c  mDNSUNP.h
app/src/main/cpp/mDNSResponder/mDNSProxy/: DSO.c  RELAY.md  RelayInterface.h  RelayProtocol.c  cfParse.c
app/src/main/cpp/mDNSResponder/mDNSShared/: CommonServices.h  dnsextd.c  dnssd_clientshim.c  dnssd_clientstub.c  uds_daemon.c
app/src/main/cpp/mDNSResponder/mDNSWindows/: BonjourQuickLooks.sln
app/src/main/cpp/mDNSResponder/mDNSWindows/BonjourQuickLooksInstaller/: BonjourQuickLooksInstaller.wixproj
app/src/main/cpp/mDNSResponder/mDNSWindows/SystemService/: Service.vcxproj  Service.vcxproj.filters
app/src/main/cpp/mDNSResponder/unittests/: daemon_ut.c  mdns_macosx_ut.c  mdns_ut.c  unittest.h  unittest_common.c
app/src/main/java/com/apple/dnssd/: BaseListener.java  BrowseListener.java  DNSRecord.java  DNSSD.java  DNSSDEmbedded.java  DNSSDException.java  DNSSDRecordRegistrar.java  DNSSDRegistration.java  DNSSDService.java  DomainListener.java  QueryListener.java  RegisterListener.java  RegisterRecordListener.java  ResolveListener.java  TXTRecord.java
app/src/main/java/com/fang/myapplication/: AirPlayServer.java  DNSNotify.java  MainActivity.java  NetUtils.java  RaopServer.java
app/src/main/java/com/fang/myapplication/dnssd/: DNSSDBindable.java
app/src/main/java/com/fang/myapplication/model/: NALPacket.java  PCMPacket.java
app/src/main/java/com/fang/myapplication/player/: AudioPlayer.java  VideoPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: styles.xml
app/src/test/java/com/fang/myapplication/: ExampleUnitTest.java
lib/: CMakeLists.txt  byteutils.c  byteutils.h  crypto.c  crypto.h  dnssd.c  dnssd.h  dnssdint.h  httpd.c  mirror_buffer.c  mirror_buffer.h  pairing.c  pairing.h  raop.c  raop.h  raop_buffer.c  raop_buffer.h  raop_handlers.h  raop_ntp.c  raop_ntp.h  raop_rtp.c  raop_rtp.h  raop_rtp_mirror.c  raop_rtp_mirror.h  stream.h  utils.c  utils.h
lib/crypto/: CMakeLists.txt
lib/fdk-aac/: CMakeLists.txt
lib/llhttp/: llhttp.c  llhttp.h
lib/plist/: bplist.c  plist.c  xplist.c
mDNSResponder/: .gitignore  CMakeLists.txt  DNSSD.java.h  mDNSResponder.sln
mDNSResponder/Clients/: Makefile
mDNSResponder/mDNSCore/: DNSCommon.c  mDNSEmbeddedAPI.h
mDNSResponder/mDNSMacOSX/: BLE.h  BonjourEvents.c  (+11 more)
renderers/: CMakeLists.txt  audio_renderer.c  audio_renderer.h  audio_renderer_dummy.c  audio_renderer_gstreamer.c  audio_renderer_rpi.c  video_renderer.c  video_renderer.h  video_renderer_dummy.c  video_renderer_gstreamer.c  video_renderer_rpi.c
renderers/fdk-aac/: CMakeLists.txt
renderers/fdk-aac/libSBRdec/src/: lpp_tran.cpp
renderers/h264-bitstream/: CMakeLists.txt  h264_stream.c
(+189 files in other folders)
